--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -95,9 +95,20 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="15dp"
-            android:text="attachments"
+            android:text=""
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
+        <ImageView
+            android:id="@+id/task_detail_image_view"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginBottom="15dp"
+            android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:background="#9C9C9C"
+            android:scaleType="centerCrop" />
 
 
     </LinearLayout>
