--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -133,7 +133,7 @@
                         android:textAlignment="center"/>
 
                     <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/floating_button_add"
+                        android:id="@+id/floating_button_add_task"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentRight="true"
