--- a/app/src/main/res/layout/adapter_category_item.xml
+++ b/app/src/main/res/layout/adapter_category_item.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <TextView
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+
+        <variable
+            name="category"
+            type="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.Category" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Category Name"
-        android:layout_marginLeft="5dp"
-        android:id="@+id/category_name"/>
-</LinearLayout>
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/category_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="@{category.getName()}" />
+    </LinearLayout>
+</layout>
