Added unique identifier for each taken pictures for add activity

--- a/app/src/main/res/layout/adapter_category_item.xml
+++ b/app/src/main/res/layout/adapter_category_item.xml
@@ -4,7 +4,7 @@
 
         <variable
             name="category"
-            type="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.Category" />
+            type="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.entities.Category" />
     </data>
 
     <LinearLayout
