--- a/app/src/main/res/layout-land/activity_task_list.xml
+++ b/app/src/main/res/layout-land/activity_task_list.xml
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         >
         <fragment
-            android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.TaskListFragment"
+            android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.fragments.TaskListFragment"
             android:id="@+id/list_frag"
             android:layout_width="0dp"
             android:layout_weight="2"
