--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".AddTaskActivity">
+        tools:context=".activities.AddTaskActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
