--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TaskDetailActivity">
+        tools:context=".activities.TaskDetailActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
