--- a/app/src/main/res/layout/activity_task_detail_fragment.xml
+++ b/app/src/main/res/layout/activity_task_detail_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.TaskDetailFragment"
+    android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.fragments.TaskDetailFragment"
     android:id="@+id/task_detail_frag"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
