--- a/app/src/main/res/layout/activity_task_list.xml
+++ b/app/src/main/res/layout/activity_task_list.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.TaskListFragment"
+        android:name="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.fragments.TaskListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <com.google.android.material.navigation.NavigationView
