--- a/app/src/main/res/layout/fragment_category_info.xml
+++ b/app/src/main/res/layout/fragment_category_info.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CategoryInfoFragment">
+    tools:context=".fragments.CategoryInfoFragment">
 
     <EditText
         android:layout_width="match_parent"
