--- a/app/src/main/res/layout/fragment_category_list.xml
+++ b/app/src/main/res/layout/fragment_category_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".CategoryListFragment">
+    tools:context=".fragments.CategoryListFragment">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
