--- a/app/src/main/res/layout/recyclerview_tasks.xml
+++ b/app/src/main/res/layout/recyclerview_tasks.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
 
         <variable
             name="task"
             type="id.ac.ui.cs.mobileprogramming.refo_ilmiya_akbar.doitnow.entities.Task" />
     </data>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -28,9 +29,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:background="@color/colorPrimaryDark"
+                    android:text="@{task.completed()}"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                     android:textColor="@color/colorLight"
-                    android:text="@{task.completed()}"
                     android:textStyle="bold" />
 
                 <TextView
