--- a/app/src/main/res/layout/adapter_category_item.xml
+++ b/app/src/main/res/layout/adapter_category_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
+
     <data>
 
         <variable
@@ -16,7 +17,7 @@
             android:id="@+id/category_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             android:text="@{category.getName()}" />
     </LinearLayout>
 </layout>
