--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -1,36 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="match_parent"
     android:padding="8dp"
-    android:weightSum="100"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:weightSum="100">
 
     <LinearLayout
         android:id="@+id/category_menus"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <Button
-            android:background="@color/colorPrimaryDark"
             android:id="@+id/filter_by_category"
-            android:layout_height="30dp"
-            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
-            android:text="List Categories"
+            android:layout_height="30dp"
+            android:layout_marginStart="5dp"
+            android:background="@color/colorPrimaryDark"
+            android:text="@string/list_categories"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/colorLight"
-            android:textSize="10sp" />
+            android:textSize="12sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floating_button_add_category"
-            android:layout_height="28dp"
-            android:layout_marginLeft="5dp"
             android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginStart="5dp"
             android:scaleType="center"
             android:src="@drawable/ic_add_black_10dp"
             android:tint="@color/colorLight"
@@ -39,40 +37,40 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_below="@id/category_menus"
-        android:layout_height="match_parent"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/category_menus"
         android:orientation="vertical"
         android:weightSum="100">
 
         <FrameLayout
             android:id="@+id/container_first"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0"
-            android:layout_width="match_parent" />
+            android:layout_weight="0" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerview_tasks"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="0dp"
-            android:layout_weight="100"
-            android:layout_width="match_parent" />
+            android:layout_weight="100" />
 
         <FrameLayout
             android:id="@+id/container_second"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0"
-            android:layout_width="match_parent" />
+            android:layout_weight="0" />
     </LinearLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:backgroundTint="@color/colorPrimaryDark"
         android:id="@+id/floating_button_add_task"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="8dp"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:src="@drawable/ic_add"
         android:tint="@color/colorLight"
         app:fabSize="normal" />
